# LibSpecialDrive

./: .gitignore  CMakeLists.txt  LibSpecialDrive.sln  LibSpecialDriveEntryPoint.c  README.md  SpecialDriveMain.c
include/: LibSpecialDrive.h
src/: LibSpecialDrive.c  LibSpecialDriveLinux.c  LibSpecialDriveMac.c  LibSpecialDriveWindows.c  LibSpecialDriverLinux.c
visualstudio/: LibSpecialDrive.vcxproj  LibSpecialDrive.vcxproj.filters  SpecialDriverMain.vcxproj  SpecialDriverMain.vcxproj.filters
